--- a/matériasif.html
+++ b/matériasif.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <img width="320"src="https://previews.123rf.com/images/cienpies/cienpies2109/cienpies210900052/174042921-grandes-livros-de-leitura-empilham-no-fundo-branco-isolado-ilustra%C3%A7%C3%A3o-de-estilo-de-desenho-animado.jpg" alt="">
-    <title>Matérias IF</title>
+    <title>Matérias IF🍃</title>
   </head>
   <body>
     <br>
