--- a/conteúdos.html
+++ b/conteúdos.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width" />
     <br>
     <img width="320"src="https://thumbs.dreamstime.com/z/ouvir-leitura-de-ilustra%C3%A7%C3%B5es-vetor-desenho-isolado-em-voz-alta-da-ilustra%C3%A7%C3%A3o-do-crian%C3%A7a-ouve-livros-para-adultos-crian%C3%A7as-235368215.jpg?ct=jpeg" alt="">
-    <title>Conteúdos🧩</title>
+    <title>Conteúdos</title>
   </head>
   <body>
     <br>
-    <h1>Conteúdos</h1>
+    <h1>Conteúdos🧩</h1>
     <hr>
     <h3>Veja abaixo os conteúdos de cada matéria e o que deve ser estudado!</h3>
     <br>
