--- a/matériasif.html
+++ b/matériasif.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <img width="320"src="https://previews.123rf.com/images/cienpies/cienpies2109/cienpies210900052/174042921-grandes-livros-de-leitura-empilham-no-fundo-branco-isolado-ilustra%C3%A7%C3%A3o-de-estilo-de-desenho-animado.jpg" alt="">
-    <title>Matérias IF🍃</title>
+    <title>Matérias IF</title>
   </head>
   <body>
     <br>
-    <h1>Matérias IF</h1>
+    <h1>Matérias IF🍃</h1>
     <hr>
     <h3>Veja abaixo suas matérias e suas respectivas atividades!</h3>
     <br>
